# flash-attn-feedstock

./: .recipe_maintainers.json  README.md  conda-forge.yml
.azure-pipelines/: azure-pipelines-linux.yml
.ci_support/: linux_64_c_compiler_version11c_stdlib_version2.17cuda_compilernvcccuda_compiler_version11.8cxx_compiler_version11python3.10.____cpython.yaml  linux_64_c_compiler_version11c_stdlib_version2.17cuda_compilernvcccuda_compiler_version11.8cxx_compiler_version11python3.11.____cpython.yaml  linux_64_c_compiler_version11c_stdlib_version2.17cuda_compilernvcccuda_compiler_version11.8cxx_compiler_version11python3.12.____cpython.yaml  linux_64_c_compiler_version11c_stdlib_version2.17cuda_compilernvcccuda_compiler_version11.8cxx_compiler_version11python3.8.____cpython.yaml  linux_64_c_compiler_version11c_stdlib_version2.17cuda_compilernvcccuda_compiler_version11.8cxx_compiler_version11python3.9.____cpython.yaml  linux_64_c_compiler_version11cuda_compilernvcccuda_compiler_version11.8cxx_compiler_version11python3.10.____cpython.yaml  linux_64_c_compiler_version11cuda_compilernvcccuda_compiler_version11.8cxx_compiler_version11python3.11.____cpython.yaml  linux_64_c_compiler_version11cuda_compilernvcccuda_compiler_version11.8cxx_compiler_version11python3.12.____cpython.yaml  linux_64_c_compiler_version11cuda_compilernvcccuda_compiler_version11.8cxx_compiler_version11python3.13.____cp313.yaml  linux_64_c_stdlib_version2.17cuda_compiler_version12.9python3.10.____cpython.yaml  (+89 more)
recipe/: build.sh  conda_build_config.yaml  meta.yaml  pyproject.toml  recipe.yaml  setup.py
(+2 files in other folders)
